# pyteleport

./: .gitignore  README.md  demo.py  onefile.txt  pyproject.toml
.cursor/rules/: git.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml
dummy/example_gitignore/: .gitignore
dummy/example_tree/dir1/: file5.md
dummy/llm/custom_project/: README.md
dummy/llm/node_project/: .gitignore  README.md  package.json
dummy/llm/python_project/: .gitignore  README.md  pyproject.toml
dummy/llm/web_project/: index.html
dummy/patch_sample/: README.md  apply_patches.sh  calculator.patch  calculator_v1.py  calculator_v2.py  greeting_bugfix.patch  greeting_v1.py  greeting_v2.py
examples/: composite_rule_example.py
plan/: todo.md
script/: cov_test.sh  format.sh  lint.sh  setup_uv.sh
src/pyteleport/: __init__.py
src/pyteleport/cli/: __init__.py  gitignore_stub.py  stabdir.py
src/pyteleport/constant/: __init__.py  dir.py  reserved_word.py
src/pyteleport/core/: __init__.py  _singlefile.py  algorithm.py  clibboard.py  patch.py  sf_operator.py  singlefile.py  teleport.py  tree.py  tree_parse.py  tui.py
src/pyteleport/generator/: generate_stab_dir.py  gitignore_stub_generator.py
src/pyteleport/integration/: __init__.py  gitignore.py
tests/test_core/: test_algorithm.py  test_tree.py
tests/test_generator/: __init__.py  test_generate_stab_dir.py
tests/test_rule/: test_composite_rule.py  test_dir_rule.py  test_gitignore_rule.py  test_glob_rule.py  test_hidden_file_rule.py  test_rule_factory.py
tool/: touch.py
(+25 files in other folders)
